# synapse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
synapse/: func.cpp  main.py
synapse/csrc/: bindings.cpp  func.cpp
synapse/csrc/include/: func.h  ndarray.h
synapse/csrc/tensor/: ndarray.cpp
synapse/include/: func.h  ndarray.h  tensor.h
synapse/tensor/: ndarray.cpp  tensor.cpp
tests/: func.cpp  ndarray.cpp
