[build-system]
requires = [
    "scikit-build-core>=0.10.7",
    "nanobind>=2.5.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "synapse"
version = "0.0.1"
authors = [
    { name = "Diogo Venâncio", email = "diogo.venancio00@gmail.com" },
]
description = "A DL framework implemented in C++"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Diogo-V/synapse"

[tool.scikit-build]
# NanoBind uses features only available on macOS 10.14 or newer
#   "error: aligned deallocation function of type 'void (void *, std::align_val_t) noexcept'
#           is only available on macOS 10.14 or newer"
# Therefore, we set the deployment target to 10.14
# https://scikit-build.readthedocs.io/en/latest/generators.html#default-deployment-target-and-architecture
cmake.args = [
  "-DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=10.14", 
  "-Wno-dev",
]
cmake.verbose = true
cmake.build-type = "Debug"

build-dir = "build/{wheel_tag}"

# This is the only editable mode currently
editable.mode = "redirect"

